# mlflow-rs

./: .gitignore  .pre-commit-config.yaml  README.md  RUST_TRACKING_SERVER_PLAN.md  pyproject.toml
rust/: .gitignore  Cargo.toml  README.md  __init__.py
rust/bench/: README.md  RESTRUCTURES.md  RESULTS.md  __init__.py  bench.py  docker-compose.soak.yml  genai_eval.md  memory.md  seed.py  soak.md  soak.py
rust/bench/genai/: README.md  __init__.py  docker-compose.yml  equivalence.py  metrics.py  mock_provider.py  raw-metrics.schema.json  runner.py  smoke.sh  t23_2.py  t23_3.py  t23_4.py  t23_5.py  test_harness.py
rust/bench/genai/results/: smoke-python.json  smoke-rust.json
rust/compliance/: allowlist.yaml  engine.py  replay.py  semantic.py
rust/compliance/corpus/: artifacts.yaml  auth.yaml  datasets.yaml  experiments.yaml  gateway.yaml  gateway_proxy_validation.yaml  graphql.yaml  invoke.yaml  issues.yaml  label_schemas.yaml  logged_models.yaml  mcp_server_registry.yaml  metrics.yaml  prompt_optimization.yaml  registry.yaml  review_queues.yaml  runs.yaml  scorers.yaml  server_info.yaml  traces.yaml  webhooks.yaml  workspaces.yaml
rust/compliance/recorders/: test_assistant_cli_provider_differential.py  test_assistant_differential.py  test_assistant_openai_provider_differential.py  test_gateway_runtime_differential.py
rust/compliance/report/: last_run.json  last_run.md  semantic_last_run.json  semantic_last_run.md  t11_6_ui_smoke.md  t22_1_inventory.md  t22_2_full.json  t22_2_full.md  t22_2_required.json  t22_2_required.md  t22_5_ui_smoke.md
rust/crates/mlflow-artifacts/: Cargo.toml
rust/crates/mlflow-artifacts/src/: get_artifact.rs  lib.rs  mime.rs  path_safety.rs  repo.rs  router.rs  s3.rs
rust/crates/mlflow-artifacts/tests/: s3_minio.rs  streaming_memory.rs
rust/crates/mlflow-auth/: Cargo.toml
rust/crates/mlflow-auth/src/: bootstrap.rs  config.rs  credential_cache.rs  db.rs  dbutil.rs  entities.rs  hash.rs  lib.rs  permissions.rs  roles.rs  schema.rs  store.rs  user_grants.rs  workspace_cache.rs
rust/crates/mlflow-auth/tests/: config.rs  credential_cache_store.rs  cross_language.rs  roles_store.rs
rust/crates/mlflow-error/: Cargo.toml
rust/crates/mlflow-error/src/: classification.rs  lib.rs  status.rs
rust/crates/mlflow-error/tests/: golden_parity.rs
rust/crates/mlflow-genai/: Cargo.toml
rust/crates/mlflow-genai-worker/: Cargo.toml
rust/crates/mlflow-genai-worker/src/: main.rs
rust/crates/mlflow-genai-worker/tests/: evaluation_jobs.rs  native_protocol.rs  spike.rs
rust/crates/mlflow-genai/examples/: evaluation_contract.rs  scorer_contract.rs
rust/crates/mlflow-genai/src/: builtins.rs  discovery.rs  engine.rs  evaluation.rs  jobs.rs  judge.rs  judge_tools.json  lib.rs  memory.rs  online.rs  optimization.rs  payload.rs  protocol.rs  store.rs  trace.rs  worker.rs
rust/crates/mlflow-genai/tests/: discovery.rs  execution.rs  payload.rs  phase19_contract.rs  protocol.rs  third_party.rs
rust/crates/mlflow-proto/: Cargo.toml  build.rs
rust/crates/mlflow-proto/examples/: dump_routes.rs
rust/crates/mlflow-proto/src/: json.rs  lenient.rs  lib.rs  routes.rs
rust/crates/mlflow-proto/tests/: genai_json.rs  json_golden.rs  lenient_parity.rs  route_table.rs
rust/crates/mlflow-registry/: Cargo.toml
rust/crates/mlflow-registry/src/: dbutil.rs  entities.rs  lib.rs  schema.rs  stages.rs  validation.rs
rust/crates/mlflow-registry/tests/: registry_store.rs  registry_store_live.rs  registry_store_workspace.rs  search.rs  search_corpus.rs
rust/crates/mlflow-search/: Cargo.toml
rust/crates/mlflow-search/src/: ast.rs  common.rs  error.rs  group.rs  lib.rs  token.rs  (+3 more)
rust/crates/mlflow-server/: CLI_PARITY.md  Cargo.toml  build.rs
rust/crates/mlflow-store/: Cargo.toml
rust/crates/mlflow-test-support/: Cargo.toml
rust/crates/mlflow-webhooks/: Cargo.toml
rust/deploy/: Dockerfile.rust  Dockerfile.rust.dockerignore  Dockerfile.ui  Dockerfile.ui.dockerignore  README.md  audit_image.sh  build_placeholder_ui.sh  docker-compose.release.yml  docker-compose.yml  nginx.conf  smoke.sh  smoke_frontend.sh
rust/docs/: ARCHIVAL_RUNBOOK.md  DEPLOYMENT.md  MIGRATION_RUNBOOK.md  ROLLBACK.md
rust/docs/walkthroughs/: t22_6_fresh_operator.md
rust/e2e/: .gitignore  README.md  basic_auth.ini  browser-audit.mjs  docker-compose.auth.yml  docker-compose.workspaces.yml  package-lock.json  package.json  part1-reporter.mjs  part1-surfaces.mjs  playwright.config.mjs  reporter.mjs  run.sh  seed.mjs  surfaces.mjs
rust/e2e/tests/: auth-ui-smoke.spec.mjs  genai-ui-smoke.spec.mjs  part1-ui-smoke.spec.mjs
rust/genai-inventory/: REPORT.md  algorithms.json  build_inventory.py  corpus-recorders.md  generate_report.py  ledger.json  licenses.md  provider_manifest.json  providers.json  run_conformance.py  scorers.json  third-party-compatibility.md  validate_ledger.py
rust/spikes/: Cargo.toml  README.md  gen_fixtures.py  gen_secrets_fixtures.py  verify.py  verify_secrets.py
rust/spikes/fixtures/: fernet.json  secrets_python.json  secrets_rust.json  werkzeug_hashes.json
rust/spikes/src/: lib.rs  secrets.rs
rust/sync/: analyze_upstream.py  state.json
rust/tests/: test_jobs_api.py
rust/tests/db/: compose.yml
rust/tools/: budget_oracle.py  build_provider_manifest.py  evaluation_oracle.py  gateway_routing_oracle.py  gen_error_goldens.py  gen_goldens.py  gen_keywords.py  gen_registry_search_corpus.py  gen_sampling_cases.py  gen_search_corpus.py  gen_search_runs_corpus.py  gen_trace_archival_fixtures.py  guardrail_oracle.py  import_codex_session.py  issue_discovery_oracle.py  judge_oracle.py  make_auth_test_db.py  make_test_db.py  prompt_optimization_oracle.py  promptlab_cross_language.py  route_parity.py  route_parity_allowlist.txt  s3_artifact_proxy_differential.py  scorer_oracle.py  seed_minio_traces.py  third_party_oracle.py  trace_archival_config_parity.py  trace_archival_cross_language.py  trace_archival_scheduler_differential.py  trace_archival_store_differential.py  verify_auth_fixture.py
rust/tools/results/: t22_0_s3_differential.json  t22_0_verification.md
(+440 files in other folders)
