# Standalone spike package (T0.4 crypto spike). The empty [workspace] table
# below makes this a self-contained workspace root so it does NOT try to join
# the parent `rust/` Cargo workspace (which excludes `spikes` anyway).
[workspace]

[package]
name = "mlflow-crypto-spike"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# werkzeug password-hash compatibility (RustCrypto)
pbkdf2 = "0.12"
scrypt = "0.11"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2.6"                                   # constant-time comparison
rand = "0.8"                                     # salt generation
base64 = "0.22"                                  # (fernet fixtures / general use)
aes-gcm = "0.10"                                 # gateway-secret AES-256-GCM envelope (T15.3)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fernet webhook-secret compatibility
fernet = "0.2"
