[package]
name = "mlflow-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
# The auth store reuses `mlflow-store`'s connection/dialect infrastructure
# (the `Db` pool enum and `Dialect` SQL helpers). Its query-execution helpers
# (`Val`/`Tx`/`RowLike`) are `pub(crate)`, so — like `mlflow-registry` and
# `mlflow-webhooks` — a small local copy lives in this crate's `dbutil` module
# (see its docs) pending consolidation into a shared crate.
mlflow-store = { workspace = true }
# The MLflow error model (codes/messages/wire shape); the store returns
# `MlflowError`s so handler layers surface Python-identical errors.
mlflow-error = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
# werkzeug-compatible password hashing (`pbkdf2:...`/`scrypt:...` verify +
# generate). RustCrypto crates; constant-time compare via `subtle`, matching
# Python's `hmac.compare_digest` (T9.1).
pbkdf2 = { workspace = true }
scrypt = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
# Per-process random HMAC key for the credential cache (`secrets.token_bytes`
# parity), drawn from the OS CSPRNG via UUIDv4 — the same source `/signup`'s
# `CsrfSecret` uses, so no extra RNG dependency.
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
mlflow-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
