[package]
name = "mlflow-error"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
mlflow-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
http-body-util = "0.1"
