[package]
name = "mlflow-genai-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "mlflow-genai-worker"
path = "src/main.rs"

[dependencies]
mlflow-genai = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
mlflow-genai = { workspace = true }
mlflow-store = { workspace = true }
mlflow-test-support = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.27.0"
tokio = { workspace = true, features = ["full", "test-util"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31.3", features = ["process", "signal"] }
