[package]
name = "mlflow-genai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["process", "signal"] }

[dev-dependencies]
serde_json = { workspace = true }
