[package]
name = "mlflow-genai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
fancy-regex = "0.14.0"
futures = { workspace = true }
reqwest = { workspace = true }
regex = "1.13.0"
strsim = "0.11.1"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = "2.5"
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["process", "signal"] }

[dev-dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
