[package]
name = "mlflow-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
build = "build.rs"

[lints]
workspace = true

[lib]
name = "mlflow_server"
path = "src/lib.rs"

[[bin]]
name = "mlflow-server"
path = "src/main.rs"

[dependencies]
mlflow-proto = { workspace = true }
mlflow-store = { workspace = true }
mlflow-registry = { workspace = true }
mlflow-auth = { workspace = true }
mlflow-search = { workspace = true }
mlflow-artifacts = { workspace = true }
mlflow-webhooks = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
hyper = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# Metrics: `metrics` facade + Prometheus exporter, not in [workspace.dependencies]
# yet (declared here directly per task instructions to avoid a concurrent-edit
# conflict on the root Cargo.toml).
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
