[package]
name = "mlflow-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
build = "build.rs"

[lints]
workspace = true

[lib]
name = "mlflow_server"
path = "src/lib.rs"

[[bin]]
name = "mlflow-server"
path = "src/main.rs"

[dependencies]
mlflow-proto = { workspace = true }
mlflow-error = { workspace = true }
mlflow-store = { workspace = true }
mlflow-registry = { workspace = true }
mlflow-auth = { workspace = true }
mlflow-search = { workspace = true }
mlflow-artifacts = { workspace = true }
mlflow-webhooks = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
hyper = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

# GraphQL (T6.1/T6.2, §3.12): `graphql-parser` gives us the query AST for the
# no-batching/query-safety guard and hand-written resolution against the fixed,
# closed MLflow schema. Declared here (not in [workspace.dependencies]) to avoid
# a concurrent-edit conflict on the root Cargo.toml with parallel-phase agents.
# `0.4.1` is the crate's latest release (2022), well past the 7-day cooldown.
graphql-parser = "0.4.1"

# Metrics: `metrics` facade + Prometheus exporter, not in [workspace.dependencies]
# yet (declared here directly per task instructions to avoid a concurrent-edit
# conflict on the root Cargo.toml).
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
hyper = { workspace = true, features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
mlflow-store = { workspace = true }
mlflow-error = { workspace = true }
mlflow-proto = { workspace = true }
mlflow-registry = { workspace = true }
mlflow-webhooks = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
tempfile = "3.27.0"
# The T9.3 RBAC HTTP tests build a fresh auth DB (create the four tables +
# alembic head) over a temp SQLite file before wrapping it in an `AuthStore`;
# the workspace HTTP tests seed/count root-table rows directly in the SQLite
# fixture (the store's `Val`/`exec` helpers are crate-private).
sqlx = { workspace = true }
