[package]
name = "mlflow-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Dev-only helper crate: shared `TempDb` fixture used by `mlflow-store` and
# `mlflow-registry` integration tests (plan T2.2). Not part of the runtime
# server; only ever pulled in as a `[dev-dependencies]` path dependency.
mlflow-store = { workspace = true }
mlflow-registry = { workspace = true }
sqlx = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
